--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "vitest": "^3.0.9"
   }
 }
