--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -2,8 +2,9 @@
   "name": "api-rest",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev": "tsx --watch src/server.ts",
     "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex"
   },
@@ -22,8 +23,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9"
   }
 }
