--- a/rest-api/.gitignore
+++ b/rest-api/.gitignore
@@ -1,5 +1,13 @@
-db/app.db
-db/test.db
+# Dependencies
 node_modules
+
+# Database
+db/*.db
+
+# Environment
 .env
 .env.test
+
+# Build
+build
+dist
