--- a/rest-api/tsconfig.json
+++ b/rest-api/tsconfig.json
@@ -14,6 +14,8 @@
       "@@modules/*": ["modules/*"],
       "@@transactions/*": ["modules/transactions/*"],
     },
+    // "outDir": "./build",
+    // "rootDir": "./src",
     "allowSyntheticDefaultImports": true,
     "plugins": [
       {
