--- a/solid-principles/package.json
+++ b/solid-principles/package.json
@@ -2,11 +2,15 @@
   "name": "solid-principles",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "tsx --watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "start:build": "node build/server.js"
+    "start:build": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +30,8 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vitest/ui": "^3.1.1",
     "npm-run-all": "^4.1.5",
     "prisma": "^6.6.0",
     "supertest": "^7.1.0",
