chore(phase-3): update tsconfig

--- a/solid-principles/tsconfig.json
+++ b/solid-principles/tsconfig.json
@@ -9,6 +9,8 @@
     "skipLibCheck": true,                   
     "paths": {
       "@@app/*": ["*"],
+      "@@users/*": ["modules/users/*"],
+      "@@shared/*": ["shared/*"],
     },
     "allowSyntheticDefaultImports": true,
     "plugins": [
