--- a/solid-principles/tsconfig.json
+++ b/solid-principles/tsconfig.json
@@ -10,6 +10,8 @@
     "paths": {
       "@@app/*": ["*"],
       "@@users/*": ["modules/users/*"],
+      "@@checkIns/*": ["modules/checkIns/*"],
+      "@@gyms/*": ["modules/gyms/*"],
       "@@shared/*": ["shared/*"],
     },
     "allowSyntheticDefaultImports": true,
