--- a/domain-driven-design/tsconfig.json
+++ b/domain-driven-design/tsconfig.json
@@ -3,11 +3,16 @@
     "moduleResolution": "node",
     "module": "ES6",
     "baseUrl": "./src",
+    "types": ["vitest/globals"],
     "target": "ES2022",                                 
     "forceConsistentCasingInFileNames": true,           
     "strict": true,                                      
     "skipLibCheck": true,                   
     "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@@core/*": ["core/*"],
+      "@@domain/*": ["domain/*"],
+    },
     "plugins": [
       {
         "name": "typescript-plugin-paths"
