--- a/domain-driven-design/tsconfig.json
+++ b/domain-driven-design/tsconfig.json
@@ -2,22 +2,24 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "module": "ES6",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "types": ["vitest/globals"],
-    "target": "ES2022",                                 
-    "forceConsistentCasingInFileNames": true,           
-    "strict": true,                                      
-    "skipLibCheck": true,                   
+    "target": "ES2022",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "@@core/*": ["core/*"],
-      "@@domain/*": ["domain/*"],
+      "@@src/*": ["src/*"],
+      "@@core/*": ["./src/core/*"],
+      "@@domain/*": ["./src/domain/*"]
     },
     "plugins": [
       {
         "name": "typescript-plugin-paths"
-      }],
+      }
+    ]
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules"]  
+  "include": ["./src/**/*", "./tests/**/*"], 
+  "exclude": ["node_modules"]
 }
