--- a/solid-principles/biome.json
+++ b/solid-principles/biome.json
@@ -19,7 +19,6 @@
     "enabled": true,
     "formatWithErrors": false,
     "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 80
+    "indentWidth": 2
   }
 }
