--- a/domain-driven-design/biome.json
+++ b/domain-driven-design/biome.json
@@ -10,6 +10,9 @@
         "noDebugger": "off",
         "noConsoleLog": "warn"
       },
+      "complexity": {
+        "noBannedTypes": "off"
+      },
       "style": {
         "useImportType": "error"
       }
